--- a/dia-1/templates/base.html
+++ b/dia-1/templates/base.html
@@ -25,17 +25,18 @@
                     </li>
                     <li class="nav-item">
                         
-                        <a class="nav-link" href="/mostrar-alumnos">Alumnos</a>
+                        <a class="nav-link" href="{{ url_for('devolver_alumnos')}} ">Alumnos</a> {# Se coloca el nombre de la función#}
                     </li>
                     <li class="nav-item">
                     
-                        <a class="nav-link" href="/agregar-alumno">Agregar Alumno</a>
+                        <a class="nav-link" href="{{ url_for('agregar_alumnos')}}">Agregar Alumno</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     {% block cuerpo %} {% endblock %}
+    {% block scripts %} {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
